--- a/index.html
+++ b/index.html
@@ -11,44 +11,44 @@
     <canvas id="canvas"></canvas>
     <nav class="left-menu">
 
-      <div class="group mass">
-        <label>H =</label>
+      <div class="group dist">
+        <label style="color: #008000;"><b>H =</b></label>
         <input id="inputH" type="number" value="0.5" step="0.1">
       </div>
 
       <div class="group mass">
-        <label>m<sub>1</sub> =</label>
+        <label style="color: #008000;"><b>m<sub>1</sub> =</b></label>
         <input id="inputM1" type="number" value="0.5" step="0.1">
       </div>
 
       <div class="group mass">
-        <label>m<sub>2</sub> =</label>
+        <label style="color: #008000;"><b>m<sub>2</sub> =</b></label>
         <input id="inputM2" type="number" value="0.5" step="0.1">
       </div>
 
       <div class="group big">
-        <label>R<sub>1</sub> =</label>
+        <label style="color: #008000;"><b> R<!--sub>1</sub></--> =</b></label>
         <input id="inputR1" type="range" min="0.1" max="1" value="0.1" step="0.1">
         <div id="valueR1"></div>
       </div>
 
-      <div class="group big">
-        <label>R<sub>2</sub> =</label>
-        <input id="inputR2" type="range" min="0.1" max="1" value="0.1" step="0.1">
-        <div id="valueR2"></div>
-      </div>
+      <!--<div class="group big">-->
+        <!--<label>R<sub>2</sub> =</label>-->
+        <!--<input id="inputR2" type="range" min="0.1" max="1" value="0.1" step="0.1">-->
+        <!--<div id="valueR2"></div>-->
+      <!--</div>-->
 
-      <div class="group big">
-        <label>R<sub>3</sub> =</label>
-        <input id="inputR3" type="range" min="0.1" max="1" value="0.1" step="0.1">
-        <div id="valueR3"></div>
-      </div>
+      <!--<div class="group big">-->
+        <!--<label>R<sub>3</sub> =</label>-->
+        <!--<input id="inputR3" type="range" min="0.1" max="1" value="0.1" step="0.1">-->
+        <!--<div id="valueR3"></div>-->
+      <!--</div>-->
 
-      <div class="group big">
-        <label>R<sub>4</sub> =</label>
-        <input id="inputR4" type="range" min="0.1" max="1" value="0.1" step="0.1">
-        <div id="valueR4"></div>
-      </div>
+      <!--<div class="group big">-->
+        <!--<label>R<sub>4</sub> =</label>-->
+        <!--<input id="inputR4" type="range" min="0.1" max="1" value="0.1" step="0.1">-->
+        <!--<div id="valueR4"></div>-->
+      <!--</div>-->
 
       <!--<div class="group small">-->
         <!--<label for="inputRuler">Линейка:</label>-->
