--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>Крестовина</title>
 </head>
 <body>
-  <header>Крестовина</header>
-
+  <header>Крестовина!</header>
   <div class="content">
     <canvas id="canvas"></canvas>
     <nav class="left-menu">
@@ -60,7 +59,6 @@
       <div class="group">
         <button id="inputStart">Старт</button>
       </div>
-
       <div class="group">
         <button id="inputReset">Сброс</button>
       </div>
