--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Крестовина</title>
 </head>
 <body>
-  <header>Крестовина!</header>
+  <header>Маятник Обербека</header>
   <div class="content">
     <canvas id="canvas"></canvas>
     <nav class="left-menu">
@@ -25,17 +25,23 @@
         <input id="inputM2" type="number" value="0.5" step="0.1">
       </div>
 
+      <div class="group power">
+        <label style="color: #008000;"><b>F<sub>тр</sub> =</b></label>
+        <input id="inputF" type="number" value="0.5" step="0.1">
+      </div>
+
       <div class="group big">
-        <label style="color: #008000;"><b> R<!--sub>1</sub></--> =</b></label>
+        <label style="color: #008000"><b> R<sub>1</sub> =</b></label>
         <input id="inputR1" type="range" min="0.1" max="1" value="0.1" step="0.1">
         <div id="valueR1"></div>
       </div>
 
-      <!--<div class="group big">-->
-        <!--<label>R<sub>2</sub> =</label>-->
-        <!--<input id="inputR2" type="range" min="0.1" max="1" value="0.1" step="0.1">-->
-        <!--<div id="valueR2"></div>-->
-      <!--</div>-->
+
+      <div class="group big">
+        <label style="color: #008000;"><b> R<sub>2</sub> =</b></label>
+        <input id="inputR2" type="range" min="0.1" max="1" value="0.1" step="0.1">
+        <div id="valueR2"></div>
+      </div>
 
       <!--<div class="group big">-->
         <!--<label>R<sub>3</sub> =</label>-->
