--- a/index.html
+++ b/index.html
@@ -87,19 +87,23 @@
         </div>
 
         <div class="group F_tension">
-          F<sub>н</sub> = <span id="outF_tension"></span> H
+          F<sub>н</sub> = <span id="outF_tension">0</span> H
         </div>
 
         <div class="group F_tension">
-          М<sub>тр</sub> = <span id="outM_friction">0</span> H*м
+          М<sub>тр</sub> = <span id="outM_friction">0</span> H × м
         </div>
 
-        <div class="group F_tension">
-          М <sub>н</sub> = <span id="outM_tension"></span> H*м
+        <div class="group M_tension">
+          М <sub>н</sub> = <span id="outM_tension">0</span> H × м
         </div>
 
         <div class="group Angular_acceleration">
-          ε = <span id="outAngAcc"></span> H*м
+          ε = <span id="outAngAcc"></span>  рад/с<sup>2</sup>
+        </div>
+
+        <div class="group Inertion">
+          I = <span id="outI">0</span> кг × м<sup>2</sup>
         </div>
 
         <!--<div class="group angspeed">-->
