--- a/index.html
+++ b/index.html
@@ -31,36 +31,28 @@
       </div>
 
       <div class="group big">
-        <label style="color: #008000"><b> R<sub>1</sub> =</b></label>
+        <label style="color: #008000">
+          <b>
+            R<sub>1</sub> =
+              <span id="outR1"></span>
+              м
+          </b>
+        </label>
         <input id="inputR1" type="range" min="0.1" max="1" value="0.5" step="0.05">
         <div id="valueR1"></div>
       </div>
 
 
       <div class="group big">
-        <label style="color: #008000;"><b> R<sub>2</sub> =</b></label>
+        <label style="color: #008000;">
+          <b> R<sub>2</sub> =
+            <span id="outR2"></span>
+            м
+          </b>
+        </label>
         <input id="inputR2" type="range" min="0.1" max="1" value="0.5" step="0.05">
         <div id="valueR2"></div>
       </div>
-
-      <!--<div class="group big">-->
-        <!--<label>R<sub>3</sub> =</label>-->
-        <!--<input id="inputR3" type="range" min="0.1" max="1" value="0.1" step="0.1">-->
-        <!--<div id="valueR3"></div>-->
-      <!--</div>-->
-
-      <!--<div class="group big">-->
-        <!--<label>R<sub>4</sub> =</label>-->
-        <!--<input id="inputR4" type="range" min="0.1" max="1" value="0.1" step="0.1">-->
-        <!--<div id="valueR4"></div>-->
-      <!--</div>-->
-
-      <!--<div class="group small">-->
-        <!--<label for="inputRuler">Линейка:</label>-->
-        <!--<input id="inputRuler" type="checkbox"/>-->
-      <!--</div>-->
-
-
 
       <div class="group">
         <button id="inputStart">Старт</button>
