--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <span class="delimiter">Текущее состояние:</span>
 
         <div class="group time">
-          Время: <span id="outTime">0</span>
+          Время: <span id="outTime">0</span> с
         </div>
 
         <div class="group acceleration">
