--- a/index.html
+++ b/index.html
@@ -77,103 +77,40 @@
 
 
       <div class="column">
-        <span class="delimiter">Текущее состояние:</span>
+        <span class="delimiter" style="color: #008000;">Результаты расчётов:</span>
 
-        <div class="group time">
-          Время: <span id="outTime">0</span> с
+        <div class="group time" style="color: #008000;">
+          Время: <span id="outTime" style="color: #008000;">0</span> с
         </div>
 
-        <div class="group acceleration">
-          a = <span id="outAcc">0</span> м/с<sup>2</sup>
+        <div class="group acceleration" style="color: #008000;">
+          a = <span id="outAcc" style="color: #008000;">0</span> м/с<sup>2</sup>
         </div>
 
-        <div class="group F_tension">
-          F<sub>н</sub> = <span id="outF_tension">0</span> H
+        <div class="group F_tension" style="color: #008000;">
+          F<sub>н</sub> = <span id="outF_tension" style="color: #008000;">0</span> H
         </div>
 
-        <div class="group F_tension">
-          М<sub>тр</sub> = <span id="outM_friction">0</span> H × м
+        <div class="group F_tension" style="color: #008000;">
+          М<sub>тр</sub> = <span id="outM_friction" style="color: #008000;">0</span> H × м
         </div>
 
-        <div class="group M_tension">
-          М <sub>н</sub> = <span id="outM_tension">0</span> H × м
+        <div class="group M_tension" style="color: #008000;">
+          М <sub>н</sub> = <span id="outM_tension" style="color: #008000;">0</span> H × м
         </div>
 
-        <div class="group Angular_acceleration">
-          ε = <span id="outAngAcc"></span>  рад/с<sup>2</sup>
+        <div class="group Angular_acceleration" style="color: #008000;">
+          ε = <span id="outAngAcc" style="color: #008000;"></span>  рад/с<sup>2</sup>
         </div>
 
-        <div class="group Inertion">
-          I = <span id="outI">0</span> кг × м<sup>2</sup>
+        <div class="group Inertion" style="color: #008000;">
+          I = <span id="outI" style="color: #008000;">0</span> кг × м<sup>2</sup>
         </div>
 
-        <!--<div class="group angspeed">-->
-          <!--ω = <span id="outV0">0</span>-->
-        <!--</div>-->
+        <div class="group FinalTime" style="color: #008000;">
+          Время спуска = <span id="outFinalTime" style="color: #008000;">0</span> c
+        </div>
 
-        <!--<div class="group ang">-->
-          <!--φ = <span id="outAng">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group force">-->
-          <!--T<sub>1</sub> = <span id="outT1">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group force">-->
-          <!--T<sub>2</sub> = <span id="outT2">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group acc">-->
-          <!--a<sub>1</sub> = <span id="outA1">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group acc">-->
-          <!--a<sub>2</sub> = <span id="outA2">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group speed">-->
-          <!--υ<sub>1</sub> = <span id="outV1">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group speed">-->
-          <!--υ<sub>2</sub> = <span id="outV2">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group dist">-->
-          <!--h<sub>1</sub> = <span id="outH1">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group dist">-->
-          <!--h<sub>2</sub> = <span id="outH2">0</span>-->
-        <!--</div>-->
-      <!--</div>-->
-
-      <!--<div class="column">-->
-        <!--<span class="delimiter">Последний запуск:</span>-->
-
-        <!--<div class="group time">-->
-          <!--Время: <span id="outLastTime">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group angacc">-->
-          <!--Ε = <span id="outLastA0">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group force">-->
-          <!--T<sub>1</sub> = <span id="outLastT1">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group force">-->
-          <!--T<sub>2</sub> = <span id="outLastT2">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group acc">-->
-          <!--a<sub>1</sub> = <span id="outLastA1">0</span>-->
-        <!--</div>-->
-
-        <!--<div class="group acc">-->
-          <!--a<sub>2</sub> = <span id="outLastA2">0</span>-->
-        <!--</div>-->
       </div>
     </nav>
   </div>
